--- a/visualization/.gitignore
+++ b/visualization/.gitignore
@@ -1,3 +1,8 @@
 notebooks
 /__pycache__/
 /visualization.egg-info/
+/../__pycache__/
+../visualization.egg-info/
+.ipynb_checkpoints/
+*.ipynb
+data/full.json
